syntax = "proto3";

package textsecure;

// option go_package = "google.golang.org/protobuf/types/known/timestamppb";

message OutMessage{
    enum Type {
      UNKNOWN = 0;
      CIPHERTEXT = 1;
      KEY_EXCHANGE = 2;
      PREKEY_BUNDLE = 3;
      RECEIPT = 5;
    }
    Type type =1 ; // [default = CIPHERTEXT]
    string source = 2;
    string relay = 3;
    bytes  body =4;
    int64 timestamp =5;
    bytes  legacyMessage = 6;
    int64 sourceDevice =7;
    bytes content = 8;

}

message  WebSocketRequestMessage{
    string verb = 1;
    string path =2 ;
    string headers = 5;
    bytes body = 3;
    uint64 id =4;
}


message  WebSocketResponseMessage{
  uint64 id =1;
  uint32 status =2;
  string message =3 ;
  string headers = 5;
  bytes body = 4;


}


message WebSocketMessage {
    enum Type {
      UNKNOWN  = 0;
      REQUEST  = 1;
      RESPONSE = 2;
    }

    Type                     type     = 1;
    WebSocketRequestMessage  request  = 2;
    WebSocketResponseMessage response = 3;
}

